Fix z-index of map to go to back on loading

--- a/public/src/css/map.pcss
+++ b/public/src/css/map.pcss
@@ -13,8 +13,11 @@ body {
   @mixin full;
   @mixin topleft;
 
-  z-index: -1;
   opacity: .3;
+}
+
+.loading #map {
+  z-index: -1;
 }
 
 .map-focus #map {
